<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".DriverRegistrationActivity">


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:startIconTint="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_email"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:id="@+id/input_email"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:startIconDrawable="@drawable/ic_baseline_vpn_key_24"
        app:startIconTint="@color/black"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_password"
        android:hint="@string/password"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:id="@+id/input_password"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textSize="15sp"
        android:id="@+id/btn_submit"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_a_user_then_sign_in"
        android:id="@+id/signInOption"
        android:layout_marginTop="60dp"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:backgroundTint="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"/>

</LinearLayout>